--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -14,7 +14,7 @@
 <div class="docs-nav">
 <div class="accordion-container">
   <ul class="menu menu-nav">
-    <li class="menu-item"><a href="/data/">Data manipulation</a></li>
+    <li class="menu-item"><a href="/tutorials/data/">Data manipulation</a></li>
   </ul>
 </div>
 </div>
