--- a/_layout/head.html
+++ b/_layout/head.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {{if hasmath}} {{insert head_katex.html }} {{end}}
+  {{if hasmath}} {{insert head_math.html }} {{end}}
   {{if hascode}} {{insert head_highlight.html }} {{end}}
 
   <link rel="stylesheet" href="/css/spectre.min.css">
