--- a/_layout/head.html
+++ b/_layout/head.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {{if hasmath}} {{insert head_math.html }} {{end}}
-  {{if hascode}} {{insert head_highlight.html }} {{end}}
+  {{insert head_highlight.html }}
 
   <link rel="stylesheet" href="/css/spectre.min.css">
   <link rel="stylesheet" href="/css/spectre-exp.min.css">
