--- a/_layout/head_highlight.html
+++ b/_layout/head_highlight.html
@@ -1,1 +1,13 @@
-<link rel="stylesheet" href="/libs/highlight/github.min.css">
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/github.min.css">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/julia.min.js">
+</script>
+
+<script>
+    hljs.initHighlightingOnLoad();
+    hljs.configure({tabReplace: '    '});
+    hljs.highlightAll();
+</script>
