--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -77,11 +77,20 @@ table {
     color: var(--black);
 }
 
+h1 {
+    margin-bottom: 3rem;
+}
+
 h2 {
-    margin-top: 3rem;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
 }
 
 #copyright {
     padding-top: 4rem;
     padding-left: 0px;
+}
+
+ol {
+    list-style: decimal;
 }
