--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -1,3 +1,3 @@
 <div id="copyright" class="docs-footer container grid-lg">
-<a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}.
+<a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}
 </div>
