--- a/_layout/head.html
+++ b/_layout/head.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="/assets/favicon.png">
   {{if hasmath}} {{insert head_math.html }} {{end}}
   {{insert head_highlight.html }}
 
