--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -8,13 +8,15 @@
 <div id="sidebar" class="docs-sidebar off-canvas-sidebar">
 
 <div class="docs-brand">
-    <h5><a href="/">JuliaTutorialsTemplate</a></h5>
+    <h5><a href="/">Julia Tutorials Template</a></h5>
 </div>
 
 <div class="docs-nav">
 <div class="accordion-container">
   <ul class="menu menu-nav">
+    <label class="according-header" for="accordion">Example tutorials</label>
     <li class="menu-item"><a href="/tutorials/data/">Data manipulation</a></li>
+    <li class="menu-item"><a href="/tutorials/linear-model/">Fitting and plotting a linear model</a></li>
   </ul>
 </div>
 </div>
