--- a/_layout/head.html
+++ b/_layout/head.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/assets/favicon.png">
-  {{if hasmath}} {{insert head_math.html }} {{end}}
+  {{insert head_math.html }}
   {{insert head_highlight.html }}
 
   <link rel="stylesheet" href="/css/spectre.min.css">
