--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -5,6 +5,10 @@
   --output-background: hsl(0, 0%, 98%);
 }
 
+body {
+    font-size: 1rem;
+}
+
 .docs-brand {
     margin-top: 0.5rem;
 }
@@ -40,6 +44,7 @@ pre {
 
 code {
     font-family: JuliaMono-Regular, SFMono-Regular, DejaVu Sans Mono;
+    font-size: 0.8rem;
 }
 
 pre code {
@@ -70,6 +75,7 @@ th {
 }
 
 table {
+    font-size: 0.7rem;
     border-collapse: collapse;
     line-height: 1.2em;
     margin-left: auto;
@@ -113,6 +119,12 @@ p {
 .menu .menu-item > a {
     font-size: 0.7rem;
     margin-bottom: 0.5rem;
+    margin-left: 0.1rem;
+}
+
+.menu-header {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
 }
 
 .manifest-versions {
@@ -122,9 +134,15 @@ p {
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
+    width: 100%;
+}
+
+@media (min-width: 480px) {
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+    }
 }
 
