--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -14,9 +14,9 @@
 <div class="docs-nav">
 <div class="accordion-container">
   <ul class="menu menu-nav">
-    <label class="according-header" for="accordion">Example tutorials</label>
-    <li class="menu-item"><a href="/tutorials/data/">Data manipulation</a></li>
-    <li class="menu-item"><a href="/tutorials/linear-model/">Fitting and plotting a linear model</a></li>
+    <div class="menu-header">Example tutorials</div>
+    <li class="menu-item"><a href="/tutorials/data/">DataFrames.jl</a></li>
+    <li class="menu-item"><a href="/tutorials/linear-model/">GLM.jl and Makie.jl</a></li>
   </ul>
 </div>
 </div>
