--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -14,7 +14,10 @@
 <div class="docs-nav">
 <div class="accordion-container">
   <ul class="menu menu-nav">
-    <div class="menu-header">Example tutorials</div>
+    <div class="menu-header">Using this template</div>
+    <li class="menu-item"><a href="/tutorials/getting-started">Getting started</a></li>
+    <br/>
+    <div class="menu-header">Example Pluto tutorials</div>
     <li class="menu-item"><a href="/tutorials/data/">DataFrames.jl</a></li>
     <li class="menu-item"><a href="/tutorials/linear-model/">GLM.jl and Makie.jl</a></li>
   </ul>
