Add in depth tutorial

--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -15,7 +15,7 @@
 <div class="accordion-container">
   <ul class="menu menu-nav">
     <div class="menu-header">Using this template</div>
-    <li class="menu-item"><a href="/tutorials/getting-started">Getting started</a></li>
+    <li class="menu-item"><a href="/getting-started">Getting started</a></li>
     <br/>
     <div class="menu-header">Example Pluto tutorials</div>
     <li class="menu-item"><a href="/tutorials/data/">DataFrames.jl</a></li>
