--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -40,10 +40,12 @@ ul {
 
 pre {
     font-family: JuliaMono-Regular, SFMono-Regular, DejaVu Sans Mono;
+    font-variant-ligatures: none;
 }
 
 code {
     font-family: JuliaMono-Regular, SFMono-Regular, DejaVu Sans Mono;
+    font-variant-ligatures: none;
     font-size: 0.8rem;
 }
 
@@ -99,6 +101,12 @@ h1 {
 h2 {
     margin-top: 2.5rem;
     margin-bottom: 1rem;
+}
+
+h3 {
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    margin-bottom: 0.8rem;
 }
 
 #copyright {
