--- a/_layout/head_highlight.html
+++ b/_layout/head_highlight.html
@@ -9,6 +9,10 @@
   src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/julia.min.js">
 </script>
 
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/julia-repl.min.js">
+</script>
+
 <script>
   hljs.configure({tabReplace: '    '});
   hljs.highlightAll();
