--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -18,8 +18,8 @@
     <li class="menu-item"><a href="/getting-started">Getting started</a></li>
     <br/>
     <div class="menu-header">Example Pluto tutorials</div>
-    <li class="menu-item"><a href="/tutorials/data/">DataFrames.jl</a></li>
-    <li class="menu-item"><a href="/tutorials/linear-model/">GLM.jl and Makie.jl</a></li>
+    <li class="menu-item"><a href="/tutorials/linear-model/">Linear model fitting</a></li>
+    <li class="menu-item"><a href="/tutorials/ode/">Harmonic oscillator</a></li>
   </ul>
 </div>
 </div>
