--- a/_layout/head.html
+++ b/_layout/head.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/spectre-overrides.css">
   <link rel="stylesheet" href="/css/docs.min.css">
 
-  {{isdef title}} <title>{{fill title}}</title>  {{end}}
+  <title>{{fill title}} - {{fill website_title}}</title>
 </head>
 <body>
   <div class="docs-container off-canvas off-canvas-sidebar-show">
