Use Artifacts system for JuliaMono

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -6,6 +6,12 @@
   <link rel="icon" type="image/png" href="/assets/favicon.png">
   {{insert head_math.html }}
   {{insert head_highlight.html }}
+    <style>
+    @font-face {
+      font-family: JuliaMono-Regular;
+      src: url("{{artifact JuliaMono juliamono-0.042 webfonts JuliaMono-Regular.woff2}}");
+    }
+    </style>
 
   <link rel="stylesheet" href="/css/spectre.min.css">
   <link rel="stylesheet" href="/css/spectre-exp.min.css">
