--- a/_layout/head_highlight.html
+++ b/_layout/head_highlight.html
@@ -1,16 +1,16 @@
 <link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/github.min.css">
+  href="{{artifact Highlight cdn-release-11.4.0 build styles github.min.css}}">
 
 <script
-  src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js">
+  src="{{artifact Highlight cdn-release-11.4.0 build highlight.min.js}}">
 </script>
 
 <script
-  src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/julia.min.js">
+  src="{{artifact Highlight cdn-release-11.4.0 build languages julia.min.js}}">
 </script>
 
 <script
-  src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/julia-repl.min.js">
+  src="{{artifact Highlight cdn-release-11.4.0 build languages julia-repl.min.js}}">
 </script>
 
 <script>
