Hardcode prepath in `@font-face`

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -9,7 +9,7 @@
     <style>
     @font-face {
       font-family: JuliaMono-Regular;
-      src: url("{{artifact JuliaMono juliamono-0.042 webfonts JuliaMono-Regular.woff2}}");
+      src: url("/JuliaTutorialsTemplate/{{artifact JuliaMono juliamono-0.042 webfonts JuliaMono-Regular.woff2}}");
     }
     </style>
 
