--- a/_layout/head.html
+++ b/_layout/head.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="/css/docs.min.css">
 
   <title>{{fill title}} - {{fill website_title}}</title>
-  <meta name="description" content="A template for online websites with Julia tutorials">
+  <meta name="description" content="A template for building websites with Julia language content. Easily create Pluto notebooks and publish them online.">
 </head>
 <body>
   <div class="docs-container off-canvas off-canvas-sidebar-show">
