Fix appearance of code blocks in Markdown

--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -44,6 +44,7 @@ code {
 }
 
 pre code {
+    display: block;
     background: var(--block-background) !important;
     overflow: auto !important;
     border: 1px solid #dbdbdb;
