--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -15,11 +15,17 @@
 <div class="accordion-container">
   <ul class="menu menu-nav">
     <div class="menu-header">Using this template</div>
-    <li class="menu-item"><a href="/getting-started">Getting started</a></li>
+    <li class="menu-item {{ispage getting-started}}active{{end}}">
+        <a href="/getting-started">Getting started</a>
+    </li>
     <br/>
     <div class="menu-header">Example Pluto tutorials</div>
-    <li class="menu-item"><a href="/tutorials/linear-model/">Linear model fitting</a></li>
-    <li class="menu-item"><a href="/tutorials/ode/">Harmonic oscillator</a></li>
+    <li class="menu-item {{ispage tutorials/linear-model}}active{{end}}">
+        <a href="/tutorials/linear-model/">Linear model fitting</a>
+    </li>
+    <li class="menu-item {{ispage tutorials/ode}}active{{end}}">
+        <a href="/tutorials/ode/">Harmonic oscillator</a>
+    </li>
   </ul>
 </div>
 </div>
