Distribute MathJax via Artifacts

--- a/_layout/head_math.html
+++ b/_layout/head_math.html
@@ -6,6 +6,25 @@
     }
   };
 </script>
-<script id="MathJax-script"
-  async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+
+<!-- This weird alignment is required by Franklin's parser. -->
+<script
+    async
+    src="{{artifact MathJax MathJax-3.2.0 es5 tex-mml-chtml.js}}">
 </script>
+
+<script
+    async
+    src="{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Zero.woff }}">
+</script>
+
+<script
+    async
+    src="{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Main-Regular.woff }}">
+</script>
+
+<script
+    async
+    src="{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Math-Italic.woff }}">
+</script>
+
