Use @font-face instead of script

--- a/_layout/head_math.html
+++ b/_layout/head_math.html
@@ -13,18 +13,20 @@
     src="{{artifact MathJax MathJax-3.2.0 es5 tex-mml-chtml.js}}">
 </script>
 
-<script
-    async
-    src="{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Zero.woff }}">
-</script>
+<style>
+@font-face {
+  src: url("/JuliaTutorialsTemplate/{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Main-Regular.woff }}">
+}
+</style>
 
-<script
-    async
-    src="{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Main-Regular.woff }}">
-</script>
+<style>
+@font-face {
+  src: url("/JuliaTutorialsTemplate/{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Zero.woff }}">
+}
+</style>
 
-<script
-    async
-    src="{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Math-Italic.woff }}">
-</script>
-
+<style>
+@font-face {
+  src: url("/JuliaTutorialsTemplate/{{artifact MathJax MathJax-3.2.0 es5 output chtml fonts woff-v2 MathJax_Math-Italic.woff }}">
+}
+</style>
