Add `with_terminal` support

--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -155,3 +155,20 @@ img {
     }
 }
 
+#plutouiterminal {
+    font-family: JuliaMono-Regular, SFMono-Regular, DejaVu Sans Mono, monospace;
+    /* Without this, the output of BenchmarkTools looks wrong. */
+    line-height: 114%;
+    max-height: 300px;
+    overflow: auto;
+    white-space: pre;
+    color: white;
+    background-color: black;
+    border-radius: 6px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding: 15px;
+    display: block;
+    font-size: 14px;
+}
+
