--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -20,6 +20,7 @@
     <div class="menu-header">Example Pluto tutorials</div>
     {{menuitem "tutorials/linear-model" "Linear model"}}
     {{menuitem "tutorials/ode" "Harmonic oscillator"}}
+    {{menuitem "tutorials/benchmarking" "Benchmarking"}}
   </ul>
 </div>
 </div>
