Simplify the ansi_up code

--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -1,4 +1,5 @@
-{{ insert ansi_foot.html }}
+<script type="text/javascript" src="/libs/ansi_up.js" defer></script>
+
 <div id="copyright" class="docs-footer container grid-lg">
 <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}
 </div>
