Show horizontal scrollbar for wide tables

--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -175,3 +175,11 @@ img {
     font-size: 14px;
 }
 
+table {
+    display: block;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+    margin: 0 auto;
+    overflow-x: auto;
+    white-space: nowrap;
+}
